fixed photo deleting